# android-ndk

hello-jni/app/: build.gradle
hello-jni/app/src/main/: AndroidManifest.xml
hello-jni/app/src/main/cpp/: CMakeLists.txt  audio.cpp
hello-jni/app/src/main/cpp/audio/android/: AudioPlayerProvider.cpp  AudioResampler.h  ICallerThreadUtils.h  UrlAudioPlayer.cpp
hello-jni/app/src/main/cpp/audio/android/utils/: Utils.cpp
hello-jni/app/src/main/jni/: AudioBufferProvider.h  AudioDecoder.cpp  AudioDecoder.h  AudioPlayer.cpp  AudioPlayer.h  AudioPlayerPool.cpp  AudioPlayerPool.h  AudioPlayerProvider.cpp  AudioPlayerProvider.h  AudioResampler.cpp  AudioResamplerCubic.h  AudioResamplerSinc.cpp  AudioResamplerSinc.h  BufferProvider.cpp  BufferProvider.h  HelloWorld.cpp  HelloWorld.h  IAudioPlayer.h  OpenSLHelper.h  PcmAudioPlayer.cpp  PcmAudioPlayer.h  PcmAudioPlayerPool.cpp  PcmAudioPlayerPool.h  PcmData.h  UrlAudioPlayer.cpp  UrlAudioPlayer.h  audio.cpp  audio.h  hello-jni.c  slesTestDecodeToBuffQueue.cpp  wav.h
hello-jni/app/src/main/jni/audio/android/: AudioBufferProvider.h  AudioDecoder.cpp  AudioDecoder.h  AudioFlinger.cpp  AudioFlinger.h  AudioMixer.cpp  AudioMixer.h  AudioMixerController.cpp  AudioMixerController.h  AudioMixerOps.h  AudioPlayerProvider.cpp  AudioPlayerProvider.h  AudioResampler.cpp  AudioResampler.h  AudioResamplerCubic.cpp  AudioResamplerCubic.h  AudioResamplerPublic.h  AudioResamplerSinc.cpp  AudioResamplerSinc.h  AudioTimestamp.h  CCThreadPool.cpp  CCThreadPool.h  ExtendedAudioBufferProvider.h  FastMixer.cpp  (+44 more)
native-audio/app/: build.gradle
(+22 files in other folders)
